samples/_failures_safe/1761002027_afd07a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c02b6bef.c: In function ‘main’:
./samples/SAFE/__tmp_c02b6bef.c:148:25: error: expected ‘)’ at end of input
  148 |     if (op == OP_INVALID
      |        ~                ^
      |                         )
./samples/SAFE/__tmp_c02b6bef.c:148:5: error: expected declaration or statement at end of input
  148 |     if (op == OP_INVALID
      |     ^~
